--- a/calculator.html
+++ b/calculator.html
@@ -19,7 +19,7 @@
                 color: rgb(0, 255, 247); 
                 }
         </style>
-        <script src="Calculator.js"></script>
+        <script src="calculator.js"></script>
     </head>
     <body>
         <h1 align="center">CALCULATOR</h1>
@@ -41,5 +41,4 @@
             <p  id="answer"> </p>    
         </div>
     </body>
-    <script scr="Calculator.js"></script>
 </html>
